# pchan

./: .gitignore  Cargo.toml  LICENSE  TODO  build.sh  structs.rs
backend/: .env  Cargo.toml  diesel.toml  quotes.txt
backend/src/: filters.rs  main.rs  push.rs  quotes.rs  schema.rs  statics.rs  unclaimedfiles.rs
backend/src/database/: POSTGRESQL.md  mod.rs  schema.rs
backend/src/database_bindings/: mod.rs
backend/src/datahandlers/: memory.rs
backend/src/endpoints/: api.rs  mod.rs
common/: Cargo.toml
common/src/: lib.rs  structs.rs
database/: Cargo.toml
database/src/: lib.rs  nice.rs  raw.rs
frontend/: Cargo.toml  Trunk.toml  index.html  manifest.html  manifest.json  scraping.html  service_worker.js  unauthorized.html
frontend/res/css/: board.css  feedback.css  header.css  home.css  notification.css  post.css  postbox.css  reply.css  roller.css  settings.css  style.css  thread.css
frontend/src/: helpers.rs  hooks.rs  main.rs  theme_data.rs
frontend/src/api/: board.rs  mod.rs  post.rs  thread.rs  token.rs
frontend/src/components/: banner_ad.rs  board_name.rs  board_select.rs  board_title.rs  context_error.rs  delete_button.rs  feedback.rs  file.rs  footer.rs  header.rs  invite_tools.rs  maybe_link.rs  mod.rs  notifications.rs  post.rs  post_box.rs  powered_by.rs  reply.rs  richtext.rs  settings.rs  spinner.rs  theme_editor.rs  thread.rs  watch_button.rs
frontend/src/components/editors/: color_editor.rs  mod.rs  theme_editor.rs  timezone_editor.rs
frontend/src/helpers/: banner.rs  board_link.rs  board_list.rs  board_title.rs  boards_navbar.rs  delete_button.rs  lazy_post.rs  mod.rs  new_post_box.rs  possibly_long_text.rs  post_container.rs  rich_post_content.rs  startswith_class.rs  thread_view.rs
frontend/src/pages/: board.rs  board_page.rs  home.rs  login.rs  mod.rs  not_found.rs  post_box.rs  redeem.rs  settings.rs  thread.rs  thread_page.rs
frontend/src/pagesold/: mod.rs
frontend/src/pagesold/home/: mod.rs  sidebar.rs
profanity/: Cargo.toml
profanity/src/: bin.rs  lib.rs
