[package]
name = "backend"
version = "0.1.0"
edition = "2021"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
async-trait = "0.1.80"
lazy_static = "1.4.0"
reqwest = { version = "0.12.3", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
warp = "0.3.7"
common = { path = "../common" }
profanity = { path = "../profanity" }
postcard = { version = "1.0.8", features = ["alloc"] }
flate2 = "1.0.28"
env_logger = "0.11.3"
diesel = { version = "2.1.5", features = ["chrono", "serde_json"]  }
diesel-async = { version = "0.4.1", features = ["postgres", "deadpool"] }
deadpool = { version = "0.9.5" }
dsync = "0.0.16"
chrono = { version = "0.4.38", features = ["serde"] }
csv = "1.3.0"
nanoid = "0.4.0"
bytes = "1.6.0"
futures = "0.3.30"
async-recursion = "1.1.0"
thumbnailer = { git = "https://github.com/Dissssy/thumbnailer" }
mime = "0.3.17"
rand = "0.8.5"
web-push = "0.10.1"
imageproc = "0.24.0"
image = "0.25.1"
# rusttype = "0.9.3"
ab_glyph = "0.2.25"
async-stream = "0.3.5"
crc32fast = "1.4.0"
base64 = "0.22.0"
rsa = "0.9.6"
notify = "6.1.1"
hmac-sha512 = "1.1.5"

[features]
default = []
no_ratelimit = []