[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.4", features = ["chrono", "serde_json", "uuid"] }
anyhow = "1.0.89"
chrono = { version = "0.4.38", features = ["serde"] }
deadpool = { version = "0.12.1" }
common = { path = "../common" }
diesel-async = { version = "0.5.0", features = ["postgres", "deadpool"] }
serde_json = "1.0.128"
rand = "0.8.5"
lazy_static = "1.5.0"
base64 = "0.22.1"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
log = "0.4.27"
