[package]
name = "frontend"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-net = "0.2.6"
log = "0.4.17"
serde = { version = "1.0.157", features = ["derive"] }
wasm-bindgen-futures = "0.4.34"
web-sys = {version = "0.3.61", features = ["HtmlSelectElement"]}
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
common = { path = "../common" }
gloo = "0.8.0"
wasm-bindgen = "0.2.84"
wasm-cookies = "0.2.1"
gloo-file = "0.2.3"
js-sys = "0.3.61"
serde_json = "1.0.96"
lazy_static = "1.4.0"
anyhow = "1.0.70"
async-lock = "2.7.0"
gloo-storage = "0.2.2"
gloo-timers = "0.2.6"
typemap = "0.3.3"
wasm-timer = "0.2.5"
yew-hooks = "0.2.0"
