[package]
name = "frontend"
version = "0.2.0"
edition = "2021"

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["cache-boards", "cache-post"]
cache-boards = ["cache-base"]
cache-board = ["cache-base"]
cache-thread = ["cache-base"]
cache-post = ["cache-base"]
cache-base = []

[dependencies]
gloo-net = "0.2.6"
log = "0.4.17"
serde = { version = "1.0.157", features = ["derive"] }
wasm-bindgen-futures = "0.4.34"
web-sys = {version = "0.3.61", features = ["HtmlSelectElement", "Screen", "Clipboard"]}
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
common = { path = "../common" }
gloo = "0.8.0"
wasm-bindgen = "0.2.84"
gloo-file = "0.2.3"
serde_json = "1.0.96"
anyhow = "1.0.70"
async-lock = "2.7.0"
gloo-storage = "0.2.2"
gloo-timers = "0.2.6"
typemap-ors = "1.0.0"
wasm-timer = "0.2.5"
yew-hooks = "0.2.0"
lazy_static = "1.4.0"
chrono-tz = { version = "0.8.2", features = ["serde"] }
yew-components = "0.3.0"
futures = "0.3.28"
