[package]
name = "frontend"
version = "0.2.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["cache-boards", "cache-post"]
cache-boards = ["cache-base"]
cache-board = ["cache-base"]
cache-thread = ["cache-base"]
cache-post = ["cache-base"]
cache-base = []

[dependencies]
gloo-net = "0.6.0"
log = "0.4.21"
serde = { version = "1.0.197", features = ["derive"] }
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = [
    "HtmlSelectElement",
    "Screen",
    "Clipboard",
    "Notification",
] }
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
common = { path = "../common" }
gloo = "0.11.0"
wasm-bindgen = "0.2.92"
gloo-file = "0.3.0"
serde_json = "1.0.115"
anyhow = "1.0.81"
async-lock = "3.3.0"
gloo-storage = "0.3.0"
gloo-timers = "0.3.0"
typemap-ors = "1.0.0"
wasm-timer = "0.2.5"
yew-hooks = "0.3.1"
lazy_static = "1.4.0"
chrono-tz = { version = "0.8.6", features = ["serde"] }
yew-components = "0.3.0"
futures = "0.3.30"
js-sys = "0.3.69"
