[package]
name = "profanity"
version = "0.1.0"
edition = "2021"

[lib]
name = "profanity"
path = "src/lib.rs"

[[bin]]
name = "profanity"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
csv = "1.2.1"
serde = { version = "1.0.160", features = ["derive"] }
regex = "1.11.0"
log = "0.4.27"
